--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 사용 시
+	implementation 'com.fasterxml.jackson.core:jackson-databind' // JSON 파싱
+
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
