--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 사용 시
 	implementation 'com.fasterxml.jackson.core:jackson-databind' // JSON 파싱
 
+	// runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.111.Final:osx-aarch_64'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
